didn't realize that removeFirst and removeLast are a Kotlin construct. Reverted to pure Java equivalent.